Ability to select different table as form: test

--- a/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
@@ -102,7 +102,7 @@
 #foreach($testTable in $company.getTables())
   #foreach($formTab in $testTable.getFormTabs())
     #if($table.equals($formTab.getTable()))
-      #set($success = $potentialtableForms.add($formTab.getTable()))
+      #set($success = $potentialtableForms.add($testTable))
     #end
   #end
 #end
