--- a/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/tables/option_sets/table_details_data.vm
@@ -111,7 +111,8 @@
   <h2>Choose a form for this table (optional)</h2>
   <form method="post" action="AppController.servlet">
     <input type="hidden" name="return" value="gui/reports_and_tables/pane3" />
-    <select name="set_table_form" onchange="form.submit();">
+    <input type="hidden" name="set_table_form" value="true" />
+    <select name="forminternaltablename" onchange="form.submit();">
       <option value="">$table.getSimpleName()</option>
       #foreach($potentialtableForm in $potentialtableForms)
         <option value="$potentialtableForm.getInternalTableName()">$potentialtableForm.getSimpleName()</option>
