--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
@@ -48,7 +48,7 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/edit")
 #set($fields = $sessionTable.getFields())
 #set($primaryKey = $sessionTable.getPrimaryKey())
 #set($formStyle = $sessionTable.getFormStyle())
-#set($sessionReport=$sessionData.getReport($sessionTable))
+#set($sessionReport=$sessionData.getReport())
 #set($firstSection = true)
 #set($formTabs = $sessionTable.getFormTabs())
 #if($sessionRowId == -1)
