Basic use of different form for a table: find parent row

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
@@ -37,7 +37,7 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/edit")
     #foreach($field in $originalTable.getFields())
       #if($sessionTable.equals($field.getRelatedTable()))
         #set($sessionRowId = $originalTableDataRow.get($field).getValueInteger())
-        Row id of parent is $sessionRowId<p>
+        $originalTableDataRow<p>
       #end
     #end
   #end
