Basic use of different form for a table: find parent row: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
@@ -38,6 +38,7 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/edit")
       #if($sessionTable.equals($field.getRelatedTable()))
         #set($sessionRowId = $originalTableDataRow.get($field).getValueInteger())
         $originalTableDataRow<p>
+        Relation to parent $field.getRelatedTable() is $field<p>
       #end
     #end
   #end
