--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
@@ -36,10 +36,7 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/edit")
     #set($originalTableDataRow = $view.getTableDataRow($originalTable))
     #foreach($field in $originalTable.getFields())
       #if($sessionTable.equals($field.getRelatedTable()))
-        #set($sessionRowId = $originalTableDataRow.get($field).getValueInteger())
-        $originalTableDataRow<p>
-        Relation to parent $field.getRelatedTable() is $field<p>
-        Value is $originalTableDataRow.get($sessionTable.getPrimaryKey())<p>
+        #set($sessionRowId = $originalTableDataRow.get($sessionTable.getPrimaryKey().getValueInteger()))
       #end
     #end
   #end
