--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_list.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_list.vm
@@ -105,17 +105,23 @@
             $report
           </a>
           #else
-						#set($reportStyle = $report.getReportStyle())
+			#set($reportStyle = $report.getReportStyle())
             #if($reportStyle == "SECTIONED")
               #set($thisReportRowLimit = $reportRowLimit * 10)
-						#elseif($reportStyle == "ONE_SECTION")
-							#set($thisReportRowLimit = $reportRowLimit * 2)
+			#elseif($reportStyle == "ONE_SECTION")
+			  #set($thisReportRowLimit = $reportRowLimit * 2)
             #else
               #set($thisReportRowLimit = $reportRowLimit)
             #end
-      			<a href="AppController.servlet?return=$pane2_template&set_table=$table.getInternalTableName()&set_report=$report.getInternalReportName()&set_report_row_limit=$thisReportRowLimit&clear_all_report_sorts=true&clear_custom_variable=tabTable&set_module=$module.getInternalModuleName()&cachebust=$viewTools.getRandomString()" #if(!$mobile_device)target="pane_2" class="report_tooltip" rel="AppController.servlet?return=gui/reports_and_tables/report_tooltip&set_custom_report=true&reportkey=tooltip_report&custominternalreportname=$report.getInternalReportName()"#end >
-      				$report
-      			</a>
+            #set($formTable = $table.getFormTable())
+            #if($formTable)
+              #set($setTab = "set_custom_table=true&tablekey=tabTable&custominternaltablename=$formTable.getInternalTableName()")
+			#else
+			  #set($setTab = "clear_custom_variable=tabTable")
+            #end
+      		<a href="AppController.servlet?return=$pane2_template&set_table=$table.getInternalTableName()&set_report=$report.getInternalReportName()&set_report_row_limit=$thisReportRowLimit&clear_all_report_sorts=true&$setTab&set_module=$module.getInternalModuleName()&cachebust=$viewTools.getRandomString()" #if(!$mobile_device)target="pane_2" class="report_tooltip" rel="AppController.servlet?return=gui/reports_and_tables/report_tooltip&set_custom_report=true&reportkey=tooltip_report&custominternalreportname=$report.getInternalReportName()"#end >
+      			$report
+      		</a>
           #end
     			<span class="recordcount">()</span>
     		  </div>
