--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_list.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_list.vm
@@ -80,14 +80,7 @@
 		#end
     	<li id="$internalModuleName" class="#if(!$moduleExpanded) modulecollapsed #end $colourStyleName">
     	  #set($moduleActions = $view.getModuleActions($internalModuleName))
-    	  <h2><span><img src="resources/icons/applications/tango/$module.getIconPath()"/> 
-    		$module
-##    		#if($mobile_device && ($moduleActions.size()>0) && ($browser_name != "Konqueror"))
-##    		  #foreach($moduleAction in $moduleActions)
-##    			<button class="moduleaction" internalmodulename="$internalModuleName" actionname="$moduleAction.getActionName()">&laquo; $moduleAction &raquo;</button>
-##    		  #end
-##    		#end
-    	  </span></h2>
+    	  <h2><span><img src="resources/icons/applications/tango/$module.getIconPath()"/>$module</span></h2>
     	  #if(($moduleActions.size()>0) && (!$mobile_device) && (!$edit_nav) && ($user.getUserType() != "LIMITED"))
         <ul parent="$internalModuleName" class="moduleaction">
     		  #foreach($moduleAction in $moduleActions)
