IE specific tests

--- a/gtpb_clientside/WEB-INF/templates/gui/display_panes.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_panes.vm
@@ -38,16 +38,16 @@
 	
   </head>
 
-  #if ($viewTools.getBrowser() == "Internet Explorer")
-    <frameset id=colsWrapper cols="250,*" frameborder="yes" framespacing="5" bordercolor="#cccccc">
-    	<frame name="pane_1" id="pane_1" scrolling="auto" frameborder="no" src="AppController.servlet?return=gui/pane1">
-    	<frameset id=rowsWrapper rows="*,*" frameborder="yes" framespacing="5" bordercolor="#cccccc">
-    	  <!-- pane 2 and 3 loads will cascade from pane 1 -->
-    	  <frame name="pane_2" id="pane_2" scrolling="auto" frameborder="no" src="AppController.servlet?return=gui/resources/nothing">
-    	  <frame name="pane_3" id="pane_3" scrolling="no" frameborder="no" src="AppController.servlet?return=gui/resources/nothing">
-    	</frameset>
-    </frameset>
-  #else
+##  #if ($viewTools.getBrowser() == "Internet Explorer")
+##    <frameset id=colsWrapper cols="250,*" frameborder="yes" framespacing="5" bordercolor="#cccccc">
+##    	<frame name="pane_1" id="pane_1" scrolling="auto" frameborder="no" src="AppController.servlet?return=gui/pane1">
+##    	<frameset id=rowsWrapper rows="*,*" frameborder="yes" framespacing="5" bordercolor="#cccccc">
+##    	  <frame name="pane_2" id="pane_2" scrolling="auto" frameborder="no" src="AppController.servlet?return=gui/resources/nothing">
+##    	  <!-- pane 2 and 3 loads will cascade from pane 1 -->
+##    	  <frame name="pane_3" id="pane_3" scrolling="no" frameborder="no" src="AppController.servlet?return=gui/resources/nothing">
+##    	</frameset>
+##    </frameset>
+##  #else
     <frameset id="colsWrapper" cols="250,*" border="5" frameborder="yes" framespacing="5">
     	<frame name="pane_1" id="pane_1" frameborder="no" scrolling="auto" src="AppController.servlet?return=gui/pane1">
       #if($view.getLoggedInUser().getUserType() == "REPORT")
@@ -61,5 +61,5 @@
     	  <frame name="pane_3" id="pane_3" scrolling="no" src="">
     	</frameset>
     </frameset>
-  #end
+##  #end
 </html>
