--- a/gtpb_clientside/WEB-INF/templates/gui/administration/users/option_sets/table_privileges_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/users/option_sets/table_privileges_data.vm
@@ -42,12 +42,16 @@
       #foreach($table in $view.getLoggedInUser().getCompany().getTables())
 		## Find the highest privilege the *user* object has
         #set($highestTablePrivilege = "")
+        #set($highestTablePrivilegeNum = 0)
         #if($view.userHasPrivilege("MANAGE_TABLE", $table))
           #set($highestTablePrivilege = "MANAGE_TABLE")
+          #set($highestTablePrivilegeNum = 3)
         #elseif($view.userHasPrivilege("EDIT_TABLE_DATA", $table))
           #set($highestTablePrivilege = "EDIT_TABLE_DATA")
+          #set($highestTablePrivilegeNum = 2)
         #elseif($view.userHasPrivilege("VIEW_TABLE_DATA", $table))
           #set($highestTablePrivilege = "VIEW_TABLE_DATA")          
+          #set($highestTablePrivilegeNum = 1)
 		#end
 		## Find the highest privilege any of the user's roles has
 		#set($highestRolePrivilegeNum = 0)
@@ -70,9 +74,9 @@
 ##          <td #if($highestRolePrivilegeNum >= 2) class="rolehasprivilege" #end>#radio_user('edit' 'EDIT_TABLE_DATA' 'gtpb_set_max_table_privilege')</td>
 ##          <td #if($highestRolePrivilegeNum == 3) class="rolehasprivilege" #end>#radio_user('manage' 'MANAGE_TABLE' 'gtpb_set_max_table_privilege')</td>
           <td class="rolehasprivilege">#if($highestRolePrivilegeNum == 0) #radio_user('none' '' 'gtpb_clear_all_table_privileges') #end</td>
-          <td #if($highestRolePrivilegeNum >= 1) class="rolehasprivilege" #end>#if($highestRolePrivilegeNum == 1) #radio_user('read' 'VIEW_TABLE_DATA' 'gtpb_set_max_table_privilege') #end</td>
-          <td #if($highestRolePrivilegeNum >= 2) class="rolehasprivilege" #end>#if($highestRolePrivilegeNum == 2) #radio_user('edit' 'EDIT_TABLE_DATA' 'gtpb_set_max_table_privilege') #end</td>
-          <td #if($highestRolePrivilegeNum == 3) class="rolehasprivilege" #end>#if($highestRolePrivilegeNum == 3) #radio_user('manage' 'MANAGE_TABLE' 'gtpb_set_max_table_privilege') #end</td>
+          <td #if($highestRolePrivilegeNum >= 1) class="rolehasprivilege" #end>#if($highestRolePrivilegeNum == 1) #radio_user('read' 'VIEW_TABLE_DATA' 'gtpb_set_max_table_privilege') #else #radio_user('read' 'VIEW_TABLE_DATA' 'gtpb_set_max_table_privilege') #end</td>
+          <td #if($highestRolePrivilegeNum >= 2) class="rolehasprivilege" #end>#if($highestRolePrivilegeNum == 2) #radio_user('edit' 'EDIT_TABLE_DATA' 'gtpb_set_max_table_privilege') #else #radio_user('edit' 'EDIT_TABLE_DATA' 'gtpb_set_max_table_privilege') #end</td>
+          <td #if($highestRolePrivilegeNum == 3) class="rolehasprivilege" #end>#if($highestRolePrivilegeNum == 3) #radio_user('manage' 'MANAGE_TABLE' 'gtpb_set_max_table_privilege') #else #radio_user('manage' 'MANAGE_TABLE' 'gtpb_set_max_table_privilege') #end</td>
         </tr>
       #end
 </table>
