Start of role/user privileges setting change: CSS

--- a/gtpb_clientside/WEB-INF/templates/gui/administration/pane3.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/pane3.vm
@@ -21,6 +21,7 @@
 <HEAD>
   <link href="resources/button/button.css" type="text/css" rel="stylesheet" />
   <link href="resources/module-colours.css" type="text/css" rel="stylesheet" />
+  <link href="resources/pane3_amalgam.css" type="text/css" rel="stylesheet" />
   <STYLE>
 	
       html, body { padding:0;
