--- a/gtpb_clientside/resources/tabs/manage_tabs.css
+++ b/gtpb_clientside/resources/tabs/manage_tabs.css
@@ -25,7 +25,7 @@ table#reportData tbody tr button.globalEdit {
   overflow:auto;
 }
 
-#navigation button { margin:5px }
+#navigation button { margin:5px; margin-left:24px }
 
 .options_wrapper { padding-left:120px; 
   height:100%;
