--- a/gtpb_clientside/resources/tabs/table_administration.css
+++ b/gtpb_clientside/resources/tabs/table_administration.css
@@ -21,7 +21,7 @@
 				  overflow:auto;
                 }
 				
-	#navigation button { margin:5px }
+  #navigation button { margin:5px; margin-left:24px }
                 
     .options_wrapper { padding-left:120px; 
     		           height:100%;
