--- a/gtpb_clientside/WEB-INF/templates/gui/administration/pane3.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/pane3.vm
@@ -48,7 +48,9 @@
                   text-align:center;
 				  overflow:auto;
                 }
-				                
+				
+	#navigation button { margin:5px; margin-left:24px }
+                
     .options_wrapper { padding-left:120px; 
     		           height:100%;
                        /*
