Start of role/user privileges setting change: user highlighting

--- a/gtpb_clientside/resources/tabs/table_administration.css
+++ b/gtpb_clientside/resources/tabs/table_administration.css
@@ -92,4 +92,8 @@
 	.rolehasprivilege {
 	  background-color: #bddfed;
 	}
+	
+	.userhasprivilege {
+	  background-color: #ddefe0;
+	}
                                     
