--- a/gtpb_clientside/WEB-INF/templates/gui/administration/users/option_sets/table_privileges.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/users/option_sets/table_privileges.vm
@@ -17,7 +17,7 @@
 ##
 #set($option_set_id='table_privileges')
 #set($option_set_title='table privileges')
-#set($option_set_subtitle="$sessionUser.getForename() has the following privileges. <span class='rolehasprivilege'>blue background</span>: $sessionUser.getForename() is a member of a role that has that privilege.")
+#set($option_set_subtitle="<span class='rolehasprivilege'>blue background</span>: $sessionUser.getForename() is a member of a role that has that privilege.")
 #set($option_set_data_path='gui/administration/users/option_sets/table_privileges_data.vm')
 
 #parse('gui/administration/option_set.vm')
