Form tabs - different table - selecting right record

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
@@ -16,7 +16,10 @@
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
 #set($sessionTabTable = $sessionData.getCustomTable("tabTable"))
-<div class="form_tabber" data-internaltablename="$sessionTable.getInternalTableName()" data-rowid="$sessionData.getRowId($sessionTable)">
+#if(!$sessionRowId)
+  #set($sessionRowId=$sessionData.getRowId($sessionTable))
+#end
+<div class="form_tabber" data-internaltablename="$sessionTable.getInternalTableName()" data-rowid="$sessionRowId">
   <div class="tab_choice active main" data-internaltablename="$sessionTable.getInternalTableName()">$sessionTable.getSingularName()</div>
   #foreach($formTab in $formTabs)
     #set($formTable = $formTab.getTable())
