--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -26,7 +26,7 @@
     #if($formTabs.size() > 0)
       #parse("gui/reports_and_tables/tabs/form_tabber.vm")
     #end
-    <div #if(($formStyle == "TWO_COLUMNS") && !$parentTable) class="two_cols" #end id="form_tabs_$sessionTable.getInternalTableName()_$sessionTable.getInternalTableName()"> <!-- start of sections container -->
+    <div #if(($formStyle == "TWO_COLUMNS") && !$parentTable) class="two_cols" #end #if($formTable && (!$formTable.equals($sessionTable))) style="display:none" #end id="form_tabs_$sessionTable.getInternalTableName()_$sessionTable.getInternalTableName()"> <!-- start of sections container -->
     #set($firstSection = false)
   #end
   #if($formStyle == 'TWO_COLUMNS')
@@ -42,7 +42,7 @@
   #if($field.equals($firstField))
     #if((!$hasSections) && ($formTabs.size() > 0))
       #parse("gui/reports_and_tables/tabs/form_tabber.vm")
-      <div class="block #if(!$parentTable) two_cols non_section #end" id="form_tabs_$sessionTable.getInternalTableName()_$sessionTable.getInternalTableName()">
+      <div class="block #if(!$parentTable) two_cols non_section #end" #if($formTable && (!$formTable.equals($sessionTable))) style="display:none" #end id="form_tabs_$sessionTable.getInternalTableName()_$sessionTable.getInternalTableName()">
     #else
       <div class="block #if(!$parentTable) two_cols non_section #end">
     #end
