Form tabs - different table - selecting right record, don't flash parent tab

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
@@ -20,7 +20,7 @@
   #set($sessionRowId=$sessionData.getRowId($sessionTable))
 #end
 <div class="form_tabber" data-internaltablename="$sessionTable.getInternalTableName()" data-rowid="$sessionRowId">
-  <div class="tab_choice active main" data-internaltablename="$sessionTable.getInternalTableName()">$sessionTable.getSingularName()</div>
+  <div class="tab_choice #if(!($formTable && (!$formTable.equals($sessionTable)))) active #end main" data-internaltablename="$sessionTable.getInternalTableName()">$sessionTable.getSingularName()</div>
   #foreach($formTab in $formTabs)
     #set($formTable = $formTab.getTable())
     #if($view.loggedInUserAllowedTo("VIEW_TABLE_DATA",$formTable))
