--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/form_tabber.vm
@@ -20,19 +20,20 @@
   #set($sessionRowId=$sessionData.getRowId($sessionTable))
 #end
 <div class="form_tabber" data-internaltablename="$sessionTable.getInternalTableName()" data-rowid="$sessionRowId">
+  Form table is $formTable<p>
   <div class="tab_choice #if(!($formTable && (!$formTable.equals($sessionTable)))) active #end main" data-internaltablename="$sessionTable.getInternalTableName()">$sessionTable.getSingularName()</div>
   #foreach($formTab in $formTabs)
     #set($formTable = $formTab.getTable())
     #if($view.loggedInUserAllowedTo("VIEW_TABLE_DATA",$formTable))
-			#set($formInternalTableName = $formTable.getInternalTableName())
-			## Find the relation field that relates to the parent table
-			#foreach($formField in $formTable.getFields())
-				#if($formField.getRelatedTable().equals($sessionTable))
-					#set($relationField = $formField)
-				#end
+		#set($formInternalTableName = $formTable.getInternalTableName())
+		## Find the relation field that relates to the parent table
+		#foreach($formField in $formTable.getFields())
+			#if($formField.getRelatedTable().equals($sessionTable))
+				#set($relationField = $formField)
 			#end
+		#end
       <div data-singular="$formTable.getSingularName()" class="tab_choice #if($formTable.equals($sessionTabTable)) session_tab #end" id="tab_choice_$formInternalTableName" data-internaltablename="$formInternalTableName" data-internalreportname="$formTab.getSelectorReport().getInternalReportName()" data-relationfield="$relationField.getInternalFieldName()">$formTab&nbsp;<img class="new" src="resources/toolbar/new.png" title="add new $formTable.getSingularName()"/></div>
     #end
-	#end
-	<div id="tab_deleter"><span id="deleter_text"></span><img src="resources/toolbar/delete_black.png" onclick="deleteTabRecord(this, false);"/></div>
+  #end
+  <div id="tab_deleter"><span id="deleter_text"></span><img src="resources/toolbar/delete_black.png" onclick="deleteTabRecord(this, false);"/></div>
 </div>
