--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/edit.vm
@@ -25,7 +25,9 @@ $viewTools.startTimer("gui/reports_and_tables/tabs/edit")
 #set($rowCount = 0)
 #set($tabCaption='edit')
 #set($sessionTable=$sessionData.getTable())
-#set($formTable = $sessionTable.getFormTable())
+#if(!$sessionData.getCustomBoolean("overrideTableForm"))
+  #set($formTable = $sessionTable.getFormTable())
+#end
 ## If set to use a table different to the current one as a form
 #if($formTable)
   #if(!$formTable.equals($sessionTable)) 
