Form tabs - different table - grandchild edit fix

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
@@ -17,7 +17,9 @@
 ##
 #set($sessionTable = $sessionData.getCustomTable("tabTable"))
 #set($parentTable = $sessionData.getTable())
-#set($formTable = $parentTable.getFormTable())
+#if(!$sessionData.getCustomBoolean("overrideTableForm"))
+  #set($formTable = $parentTable.getFormTable())
+#end
 #if($formTable)
   #set($parentTable = $formTable)
 #end
